cmake_minimum_required(VERSION 2.6)

CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET( PROJ_NAME      "tm-muxer" )
SET( PROJ_PATH      ${CMAKE_SOURCE_DIR} )
SET( PROJ_OUT_PATH  ${CMAKE_BINARY_DIR} )
SET( PROJ_SOURCES   "" )
FILE( GLOB_RECURSE PROJ_SOURCES src/*.cpp )
SET( PROJ_HEADERS   "" )
FILE( GLOB_RECURSE PROJ_HEADERS include/*.h )
SET( PROJ_LIBRARIES "${PROJ_PATH}/../libmpeg2-build/libmpeg2-tm.a" "rt")
SET( PROJ_INCLUDES  "include" "${PROJ_PATH}/../libmpeg2/include" )

PROJECT( ${PROJ_NAME} )

INCLUDE_DIRECTORIES( ${PROJ_INCLUDES} )
ADD_EXECUTABLE (${PROJ_NAME} ${PROJ_SOURCES})

LINK_DIRECTORIES ( ${PROJ_PATH}/../libmpeg2-build ) 
TARGET_LINK_LIBRARIES( ${PROJ_NAME} ${PROJ_LIBRARIES} )

set(CMAKE_CXX_FLAGS "-g -Wall")
