cmake_minimum_required(VERSION 2.8)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

SET( PROJ_NAME      "tm-muxer" )
SET( PROJ_PATH      ${CMAKE_SOURCE_DIR} )
SET( PROJ_OUT_PATH  ${CMAKE_BINARY_DIR} )
SET( PROJ_SOURCES   "" )
FILE( GLOB_RECURSE PROJ_SOURCES src/*.cpp )
SET( PROJ_HEADERS   "" )
FILE( GLOB_RECURSE PROJ_HEADERS include/*.h )
SET( PROJ_LIBRARIES "tmm-mpeg2ts" "rt")
SET( PROJ_INCLUDES  "include" "tmm-mpeg2ts/include")

PROJECT( ${PROJ_NAME} )

INCLUDE_DIRECTORIES( ${PROJ_INCLUDES} )
ADD_EXECUTABLE (${PROJ_NAME} ${PROJ_SOURCES})

ADD_SUBDIRECTORY(tmm-mpeg2ts)

TARGET_LINK_LIBRARIES( ${PROJ_NAME} ${PROJ_LIBRARIES} tmm-mpeg2ts)

set(CMAKE_CXX_FLAGS "-g -Wall")
